force-app/main/default/objects/OrderItem__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>OrderId__r.AccountId__c</formula>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>