force-app/main/default/objects/OrderItem__c/fields/Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Batch Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory__c.Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product2Id__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>