force-app/main/default/objects/OrderItem__c/fields/Cross_Discount_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Cross_Discount_Product_Id__c</fullName>
    <label>Cross_Discount_Product_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>