force-app/main/default/objects/OrderItem__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <formula>OrderId__r.Manufacturer_Dealer__c</formula>
    <label>Dealer</label>
    <type>Text</type>
</CustomField>