force-app/main/default/objects/OrderItem__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <formula>IF( OrderId__r.Type__c = &quot;Dealer&quot;,  Batch_Number__r.Dealer_Price__c , Batch_Number__r.Retailer_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>