force-app/main/default/objects/OrderItem__c/fields/OriginalOrderItem__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OriginalOrderItem</label>
    <referenceTo>OrderItem__c</referenceTo>
    <relationshipName>OrderItems</relationshipName>
    <type>Lookup</type>
</CustomField>