force-app/main/default/objects/OrderItem__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <formula>Product2Id__r.StockKeepingUnit__c</formula>
    <label>Product SKU#</label>
    <type>Text</type>
</CustomField>