force-app/main/default/objects/OrderItem__c/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <formula>OrderId__r.SHIPPINGSTATE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping</label>
    <type>Text</type>
</CustomField>