force-app/main/default/objects/OrderItem__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>UnitPrice</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>